--- a/back/package.json
+++ b/back/package.json
@@ -15,12 +15,15 @@
   "dependencies": {
     "@prisma/client": "^4.5.0",
     "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-errors": "^0.3.1",
     "global": "^4.4.0",
+    "jsonwebtoken": "^8.5.1",
     "prisma": "^4.5.0"
   }
 }
