--- a/back/package.json
+++ b/back/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/multer": "^1.4.7",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.4"
   },
@@ -24,6 +25,7 @@
     "express-errors": "^0.3.1",
     "global": "^4.4.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^4.5.0"
   }
 }
